--- a/Taskbar.html
+++ b/Taskbar.html
@@ -94,10 +94,13 @@
                 <a href="block-diagram.html" class="nav-button-text"> Block Diagram </a>
             </nav-button>
             <nav-button>
-                <a href="https://recpal.github.io/Group304EGR314.github.io/" class="nav-button-text"> Team Page </a>
+                <a href="API.html" class="nav-button-text"> API </a>
             </nav-button>
             <nav-button>
-                <a href="API.html" class="nav-button-text"> API </a>
+                <a href="Resources.html" class="nav-button-text"> Resources </a>
+            </nav-button>
+            <nav-button>
+                <a href="https://asu-egr314-2025-s-310.github.io/" class="nav-button-text"> Team Page </a>
             </nav-button>
         </page-nav>
     </header>
